# initial-settings

./: .default-cargo-crates  .gitignore  .p10k.zsh  .profile  .zimrc  README.en.md  README.md  configure-vscode-terminal.py  init.zsh  pyproject.toml
.github/workflows/: tests.yaml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
tests/: test_configure_vscode_terminal.py
